--- a/src/app/places/properties/properties.page.html
+++ b/src/app/places/properties/properties.page.html
@@ -14,6 +14,7 @@
 
 <ion-content>
   <ion-grid>
+      ADD SEARCH BAR HERE
     <ion-row>
       <ion-col size="12" size-sm="12" offset-sm="0">
         <ion-list>
