--- a/src/app/places/leases/lease-details/lease-details.page.html
+++ b/src/app/places/leases/lease-details/lease-details.page.html
@@ -42,7 +42,7 @@
         </ion-item> -->
     <!-- <ion-img src="https://www.parisperfect.com/g/apartment-hero-images/hi_lalande-64-new.jpg"></ion-img> -->
     <ion-card-header padding>
-        <ion-card-subtitle text-center>Details</ion-card-subtitle>
+        <ion-card-subtitle text-center>Lease Details</ion-card-subtitle>
     </ion-card-header>
     <ion-item>
         <ion-label>Property Address</ion-label>
