--- a/src/app/places/properties/new-property/new-property.page.html
+++ b/src/app/places/properties/new-property/new-property.page.html
@@ -17,7 +17,7 @@
 <ion-grid no-padding>
     <ion-row>
         <ion-col size-sm="12" text-center>
-            <strong>Details</strong>
+            <strong>Property Details</strong>
         </ion-col>
     </ion-row>
 </ion-grid>
