--- a/src/app/places/tenants/new-tenant/new-tenant.page.html
+++ b/src/app/places/tenants/new-tenant/new-tenant.page.html
@@ -16,7 +16,7 @@
     <ion-grid no-padding>
         <ion-row>
             <ion-col size-sm="12" offset-sm="0" text-center>
-                <strong>Details</strong>
+                <strong>Tenant Details</strong>
             </ion-col>
         </ion-row>
     </ion-grid>
