--- a/src/app/places/leases/lease-details/lease-details.page.html
+++ b/src/app/places/leases/lease-details/lease-details.page.html
@@ -14,12 +14,12 @@
 <ion-card>
     <ion-list>
             <ion-item-sliding>
-                <ion-item [routerLink]="['/', 'places', 'tabs', 'leases', 'expense']">
+                <ion-item [routerLink]="['/', 'places', 'tabs', 'expenses', 'new']">
                     Add Expense
                 </ion-item>
                 </ion-item-sliding>
                 <ion-item-sliding>
-                    <ion-item [routerLink]="['/', 'places', 'tabs', 'leases', 'document']">
+                    <ion-item [routerLink]="['/', 'places', 'tabs', 'documents', 'new']">
                         Add Document
                     </ion-item>
             </ion-item-sliding>
