--- a/src/app/places/leases/edit-lease/edit-lease.page.html
+++ b/src/app/places/leases/edit-lease/edit-lease.page.html
@@ -13,7 +13,7 @@
 </ion-header>
       
 <ion-content padding>
-  <form [formGroup]= "form">
+  <form *ngIf="lease" [formGroup]="form">
     <ion-grid>
       <ion-row>
           <ion-col size-sm="12" offset-sm="0">
