subscribe to http requests in components

--- a/src/app/places/expenses/expenses.page.html
+++ b/src/app/places/expenses/expenses.page.html
@@ -12,60 +12,60 @@
     </ion-toolbar>
 </ion-header>
         
-        <ion-content>
-        <ion-row>
-                <ion-col size-sm="12" offset-sm="0">
-                    <ion-item>
-                        <ion-label>Total</ion-label>
-                        <ion-text fill="outline" slot="end">{{ 99999 | currency:'USD' }}</ion-text>
-                    </ion-item>
-                </ion-col>
-            </ion-row>
+<ion-content>
+    <ion-row>
+        <ion-col size-sm="12" offset-sm="0">
+            <ion-item>
+                <ion-label>Total</ion-label>
+                <ion-text fill="outline" slot="end">{{ totalExpenses | currency:'USD' }}</ion-text>
+            </ion-item>
+        </ion-col>
+    </ion-row>
 
+    <ion-row>
+        <ion-col size-sm="12" offset-sm="0">
+            <ion-item>
+                <ion-label>Filter By Category</ion-label>
+                <ion-select [(ngModel)]="category" (ionChange)="filterByCategory(category)" okText="Okay" cancelText="Dismiss">
+                    <ion-select-option *ngFor="let category of expenseCategories" [value]="category">{{category}}</ion-select-option>
+                </ion-select>
+            </ion-item>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col size-sm="12" offset-sm="0">
+            <ion-item>
+                <ion-label>Filter By Property</ion-label>
+                <ion-select [(ngModel)]="propertyId" (ionChange)="filterByProperty(propertyId)" okText="Okay" cancelText="Dismiss">
+                    <ion-select-option *ngFor="let property of properties" [value]="property.id">{{property.address}}</ion-select-option>
+                </ion-select>
+            </ion-item>
+        </ion-col>
+    </ion-row>
+
+    <ion-grid>
         <ion-row>
-            <ion-col size-sm="12" offset-sm="0">
-                <ion-item>
-                    <ion-label>Filter By Category</ion-label>
-                    <ion-select [(ngModel)]="category" (ionChange)="filterByCategory(category)" okText="Okay" cancelText="Dismiss">
-                        <ion-select-option *ngFor="let category of expenseCategories" [value]="category">{{category}}</ion-select-option>
-                    </ion-select>
+        <ion-col size="12" size-sm="12" offset-sm="0">
+            <ion-list>
+            <ion-item-sliding *ngFor="let expense of filteredExpenses" #slidingItem>
+                <ion-item  [routerLink]="['/', 'places', 'tabs', 'expenses', expense.id]">
+                    <ion-label>
+                        <h4>{{expense.amount | currency:'US'}}</h4>
+                        <div class="expense-details">
+                        </div>
+                    </ion-label>
                 </ion-item>
-            </ion-col>
+                        
+            <ion-item-options side="end">
+                <ion-item-option color="secondary" (click)="onEdit(expense.id, slidingItem)">
+                <ion-icon name="create" slot="icon-only"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+            </ion-item-sliding>
+            </ion-list>
+        </ion-col>
         </ion-row>
-
-        <ion-row>
-            <ion-col size-sm="12" offset-sm="0">
-                <ion-item>
-                    <ion-label>Filter By Property</ion-label>
-                    <ion-select [(ngModel)]="propertyId" (ionChange)="filterByProperty(propertyId)" okText="Okay" cancelText="Dismiss">
-                        <ion-select-option *ngFor="let property of (properties$ | async)" [value]="property.id">{{property.address}}</ion-select-option>
-                    </ion-select>
-                </ion-item>
-            </ion-col>
-        </ion-row>
-
-        <ion-grid>
-            <ion-row>
-            <ion-col size="12" size-sm="12" offset-sm="0">
-                <ion-list>
-                <ion-item-sliding *ngFor="let expense of filteredExpenses" #slidingItem>
-                    <ion-item  [routerLink]="['/', 'places', 'tabs', 'expenses', expense.id]">
-                        <ion-label>
-                            <h4>{{expense.amount | currency:'US'}}</h4>
-                            <div class="expense-details">
-                            </div>
-                        </ion-label>
-                    </ion-item>
-                          
-                <ion-item-options side="end">
-                    <ion-item-option color="secondary" (click)="onEdit(expense.id, slidingItem)">
-                    <ion-icon name="create" slot="icon-only"></ion-icon>
-                    </ion-item-option>
-                </ion-item-options>
-                </ion-item-sliding>
-                </ion-list>
-            </ion-col>
-            </ion-row>
-        </ion-grid>
-    </ion-content>
+    </ion-grid>
+</ion-content>
           
