--- a/src/app/places/leases/leases.page.html
+++ b/src/app/places/leases/leases.page.html
@@ -27,6 +27,8 @@
             <h2>{{ lease.Property.address}}</h2>
             <h6>{{lease.leaseStart}} to {{lease.leaseEnd}}</h6>
             <p>{{lease.rentAmount | currency:'USD'}}/month</p>
+            <p>Lease ends in xxx days</p>
+            <p>Next payment due in xxx days</p>
           </ion-label>
         </ion-item>
         </ion-list>
