--- a/src/app/places/properties/properties.page.html
+++ b/src/app/places/properties/properties.page.html
@@ -14,11 +14,11 @@
 
 <ion-content>
   <ion-grid>
-      ADD SEARCH BAR HERE
+      <ion-searchbar placeholder="Search Properties" (ionChange)="filterProperties($event)" debounce="500"></ion-searchbar>
     <ion-row>
       <ion-col size="12" size-sm="12" offset-sm="0">
         <ion-list>
-          <ion-item-sliding *ngFor="let property of (properties$ | async)" #slidingItem>
+          <ion-item-sliding *ngFor="let property of filteredProperties" #slidingItem>
            <app-property-item [property]="property"></app-property-item>
           <ion-item-options side="end">
             <ion-item-option color="secondary" (click)="onEdit(property.id, slidingItem)">
