--- a/src/app/places/properties/property-details/property-details.page.html
+++ b/src/app/places/properties/property-details/property-details.page.html
@@ -18,6 +18,11 @@
             </ion-item>
           </ion-item-sliding>
           <ion-item-sliding>
+                <ion-item [routerLink]="['/', 'places', 'tabs', 'properties', 'list', propertyId]">
+                    List Property  [ NEED A WAY TO POST ON ZILLOW FROM HERE]
+                </ion-item>
+            </ion-item-sliding>
+          <ion-item-sliding>
               <ion-item [routerLink]="['/', 'places', 'tabs', 'leases', 'new']">
                   Add Lease
               </ion-item>
@@ -39,7 +44,7 @@
                 </ion-item-sliding>
         </ion-list>
       <ion-card-header padding>
-        <ion-card-subtitle text-center>Details</ion-card-subtitle>
+        <ion-card-subtitle text-center>Property Details</ion-card-subtitle>
       </ion-card-header>
       <ion-item>
           <ion-label>Purchase Price</ion-label>
