--- a/src/app/places/tenants/tenants.page.html
+++ b/src/app/places/tenants/tenants.page.html
@@ -17,7 +17,7 @@
         <ion-row>
         <ion-col size="12" size-sm="12" offset-sm="0">
             <ion-list>
-            <ion-item-sliding *ngFor="let tenant of (tenants$ | async)" #slidingItem>
+            <ion-item-sliding *ngFor="let tenant of tenants" #slidingItem>
                 <ion-item  [routerLink]="['/', 'places', 'tabs', 'tenants', tenant.id]">
                     <ion-thumbnail slot="start">
                         <ion-img [src]="tenant.imageUrl"></ion-img>
