--- a/src/app/places/tenants/new-tenant/new-tenant.page.html
+++ b/src/app/places/tenants/new-tenant/new-tenant.page.html
@@ -22,6 +22,16 @@
     </ion-grid>
     <form [formGroup]="form">
         <ion-grid>
+            <ion-row>
+                <ion-col size-sm="12" offset-sm="0">
+                    <ion-item *ngIf="leases">
+                        <ion-label>Assign To Lease</ion-label>
+                        <ion-select value="LeaseId" formControlName="LeaseId" okText="Okay" cancelText="Dismiss">
+                        <ion-select-option *ngFor="let lease of leases" [value]="lease.id">{{lease.Property.address}}</ion-select-option>
+                        </ion-select>
+                    </ion-item>
+                </ion-col>
+                </ion-row>
         <ion-row>
             <ion-col size-sm="12" offset-sm="0">
             <ion-item>
