--- a/src/app/places/tenants/tenant-details/tenant-details.page.html
+++ b/src/app/places/tenants/tenant-details/tenant-details.page.html
@@ -30,7 +30,7 @@
             </ion-item>
             <ion-item>
                 <ion-label>Date of Birth</ion-label>
-                <ion-text fill="outline" slot="end">{{ tenant.DOB }}</ion-text>
+                <ion-text fill="outline" slot="end">{{ tenant.DOB | date }}</ion-text>
             </ion-item>
             <ion-item>
                 <ion-label>Drivers License</ion-label>
