--- a/src/app/places/tenants/tenants.page.html
+++ b/src/app/places/tenants/tenants.page.html
@@ -24,7 +24,7 @@
                     </ion-thumbnail>
                     <ion-label>
                         <h4>{{tenant.name}}</h4>
-                        <p>Tenant Address Here</p>
+                        <p>{{tenant.Lease.Property.address}}</p>
                         <div class="tenant-details">
                         <!-- <ion-icon name="calendar" color="secondary"></ion-icon> -->
                         <!-- <ion-text color="tertiary" class="space-left">{{tenant.availableFrom | date}}</ion-text>
