--- a/src/app/places/leases/edit-lease/edit-lease.page.html
+++ b/src/app/places/leases/edit-lease/edit-lease.page.html
@@ -19,7 +19,7 @@
           <ion-col size-sm="12" offset-sm="0">
             <ion-item *ngIf="(properties$ | async) as properties">
                 <ion-label>Address</ion-label>
-                <ion-select value="propertyId" okText="Okay" cancelText="Dismiss">
+                <ion-select value="PropertyId" formControlName="PropertyId" okText="Okay" cancelText="Dismiss">
                   <ion-select-option *ngFor="let property of properties" [value]="property.id">{{property.address}}</ion-select-option>
                 </ion-select>
               </ion-item>
@@ -44,16 +44,16 @@
           <ion-row>
             <ion-col size-sm="12" offset-sm="0">
                 <ion-item>
-                  <ion-label position="floating">Rent Amount</ion-label>
-                  <ion-input type="number" formControlName="rentAmount"></ion-input>
+                  <ion-label position="floating">Rent Amount Due</ion-label>
+                  <ion-input type="number" formControlName="rentAmountDue"></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
             <ion-row>
             <ion-col size-sm="12" offset-sm="0">
               <ion-item>
-                <ion-label position="floating">Rent Due (day)</ion-label>
-                <ion-input type="number" formControlName="rentDue"></ion-input>
+                <ion-label position="floating">Rent Due Day</ion-label>
+                <ion-input type="number" formControlName="rentDueDay"></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -68,8 +68,8 @@
         <ion-row>
             <ion-col size-sm="12" offset-sm="0">
               <ion-item>
-                <ion-label position="floating">Late Fee (daily)</ion-label>
-                <ion-input type="number" formControlName="lateFee"></ion-input>
+                <ion-label position="floating">Daily Late Fee</ion-label>
+                <ion-input type="number" formControlName="dailyLateFee"></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -77,7 +77,7 @@
             <ion-col size-sm="12" offset-sm="0">
                 <ion-item>
                   <ion-label position="floating">Rent Late After (# days)</ion-label>
-                  <ion-input type="number" formControlName="lateDays"></ion-input>
+                  <ion-input type="number" formControlName="lateDaysAllowed"></ion-input>
                 </ion-item>
               </ion-col>
           </ion-row>
