--- a/src/app/places/leases/leases.page.html
+++ b/src/app/places/leases/leases.page.html
@@ -17,18 +17,18 @@
     <ion-row>
       <ion-col size="12" size-sm="12" offset-sm="0" text-center>
         <ion-list>
-        <ion-item 
-        *ngFor="let lease of (leases$ | async)"
+        <ion-item *ngFor="let lease of leases"
         [routerLink]="['/', 'places', 'tabs', 'leases', lease.id ]" detail >
           <!-- <ion-thumbnail slot="start">
             <ion-img [src]="place.imageUrl"></ion-img>
           </ion-thumbnail> -->
           <ion-label text-center>
             <h2>{{ lease.Property.address}}</h2>
-            <h6>{{lease.leaseStart}} to {{lease.leaseEnd}}</h6>
-            <p>{{lease.rentAmount | currency:'USD'}}/month</p>
-            <p>Lease ends in xxx days</p>
-            <p>Next payment due in xxx days</p>
+            <h6>{{lease.leaseStart | date}} to {{lease.leaseEnd | date}}</h6>
+            <p>{{lease.rentAmountDue | currency:'USD'}}/month</p>
+            <p>Next payment due in {{ lease.LeasePayments[0].daysUntilNextPaymentDue }} days</p>
+            <p *ngIf="lease.LeasePayments[0].daysPastDue">Payment is {{ lease.LeasePayments[0].daysPastDue }} days late</p>
+            <p>Lease ends in {{lease.daysUntilLeaseEnd}} days</p>
           </ion-label>
         </ion-item>
         </ion-list>
