--- a/src/app/places/properties/properties.page.html
+++ b/src/app/places/properties/properties.page.html
@@ -15,7 +15,29 @@
 <ion-content>
   <ion-grid>
       <ion-searchbar placeholder="Search Properties" (ionChange)="filterProperties($event)" debounce="500"></ion-searchbar>
-    <ion-row>
+    <!-- <ion-row>SHOW MONTHLY INCOME and EXPENSES HERE</ion-row> -->
+    <ion-item>
+        <ion-label>Monthly Revenue</ion-label>
+        <ion-text fill="outline" slot="end"> {{totalMonthlyIncome | currency:'USD'}}</ion-text>
+    </ion-item>
+    <ion-item>
+        <ion-label>Monthly Expenses</ion-label>
+        <ion-text fill="outline" slot="end"> {{totalMonthlyExpenses | currency:'USD'}}</ion-text>
+    </ion-item>
+    <ion-item>
+        <ion-label>Monthly Profit</ion-label>
+        <ion-text fill="outline" slot="end"> {{(totalMonthlyIncome - totalMonthlyExpenses) | currency:'USD'}}</ion-text>
+    </ion-item>
+    <ion-item>
+        <ion-label>Total Equity</ion-label>
+        <ion-text fill="outline" slot="end"> {{totalEquity | currency:'USD'}}</ion-text>
+    </ion-item>
+    <ion-item>
+        <ion-label>Total Mortgage Debt</ion-label>
+        <ion-text fill="outline" slot="end"> {{totalMortgageDebt | currency:'USD'}}</ion-text>
+    </ion-item>
+    <!-- <ion-row>SHOW TOTAL EQUITY and TOTAL DEBT HERE</ion-row> -->
+      <ion-row>
       <ion-col size="12" size-sm="12" offset-sm="0">
         <ion-list>
           <ion-item-sliding *ngFor="let property of filteredProperties" #slidingItem>
