--- a/src/app/places/properties/new-property/new-property.page.html
+++ b/src/app/places/properties/new-property/new-property.page.html
@@ -56,6 +56,14 @@
                 </ion-item>
             </ion-col>
         </ion-row>
+        <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                    <ion-label position="floating">Mortgage Debt</ion-label>
+                    <ion-input type="number" formControlName="mortgageDebt"></ion-input>
+                </ion-item>
+            </ion-col>
+        </ion-row>
     <ion-row>
         <ion-col size-sm="12" offset-sm="0">
             <ion-item>
