--- a/src/app/places/expenses/new-expense/new-expense.page.html
+++ b/src/app/places/expenses/new-expense/new-expense.page.html
@@ -38,8 +38,8 @@
             <ion-col size-sm="12" offset-sm="0">
                 <ion-item>
                 <ion-label position="floating">Date</ion-label>
-                    <ion-input type="number" formControlName="date"></ion-input>
-                </ion-item>
+                <ion-datetime min="2019-01-01" max="2099-12-31" formControlName="date"></ion-datetime>
+            </ion-item>
             </ion-col>
         </ion-row>
         <ion-row>
