--- a/src/app/places/leases/lease-details/lease-details.page.html
+++ b/src/app/places/leases/lease-details/lease-details.page.html
@@ -13,11 +13,11 @@
 <ion-content *ngIf="lease">
 <ion-card>
     <ion-list>
-            <ion-item-sliding>
+            <!-- <ion-item-sliding>
                 <ion-item [routerLink]="['/', 'places', 'tabs', 'expenses', 'new']">
                     Add Expense
                 </ion-item>
-                </ion-item-sliding>
+                </ion-item-sliding> -->
                 <ion-item-sliding>
                     <ion-item [routerLink]="['/', 'places', 'tabs', 'documents', 'new']">
                         Add Document
