--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -18,7 +18,7 @@
     </ion-tab-button>
     <ion-tab-button tab="expenses">
         <ion-label>Expenses</ion-label>
-        <!-- <ion-icon name="money"></ion-icon> -->
+        <ion-icon name="cash"></ion-icon>
     </ion-tab-button>
     <!-- <ion-tab-button tab="properties">
         <ion-label>Open Service Requests</ion-label>
