--- a/src/app/places/properties/new-property/new-property.page.html
+++ b/src/app/places/properties/new-property/new-property.page.html
@@ -27,7 +27,7 @@
     <ion-row>
         <ion-col size-sm="12" offset-sm="0">
         <ion-item>
-            <ion-label position="floating">Property Address</ion-label>
+            <ion-label position="floating">Address</ion-label>
             <ion-input type="text" autocomplete autocorrect formControlName="address"></ion-input>
         </ion-item>
         </ion-col>
