--- a/src/app/places/expenses/expenses.page.html
+++ b/src/app/places/expenses/expenses.page.html
@@ -13,11 +13,15 @@
 </ion-header>
         
 <ion-content>
+
     <ion-row>
         <ion-col size-sm="12" offset-sm="0">
             <ion-item>
-                <ion-label>Total</ion-label>
-                <ion-text fill="outline" slot="end">{{ totalExpenses | currency:'USD' }}</ion-text>
+                <ion-label>Filter By Property</ion-label>
+                <ion-select [(ngModel)]="propertyId" (ionChange)="filterExpenses()" okText="Okay" cancelText="Dismiss">
+                        <ion-select-option [value]="">All Properties</ion-select-option>
+                    <ion-select-option *ngFor="let property of properties" [value]="property.id">{{property.address}}</ion-select-option>
+                </ion-select>
             </ion-item>
         </ion-col>
     </ion-row>
@@ -26,7 +30,8 @@
         <ion-col size-sm="12" offset-sm="0">
             <ion-item>
                 <ion-label>Filter By Category</ion-label>
-                <ion-select [(ngModel)]="category" (ionChange)="filterByCategory(category)" okText="Okay" cancelText="Dismiss">
+                <ion-select [(ngModel)]="category" (ionChange)="filterExpenses()" okText="Okay" cancelText="Dismiss">
+                    <ion-select-option [value]="">All Category</ion-select-option>
                     <ion-select-option *ngFor="let category of expenseCategories" [value]="category">{{category}}</ion-select-option>
                 </ion-select>
             </ion-item>
@@ -36,10 +41,8 @@
     <ion-row>
         <ion-col size-sm="12" offset-sm="0">
             <ion-item>
-                <ion-label>Filter By Property</ion-label>
-                <ion-select [(ngModel)]="propertyId" (ionChange)="filterByProperty(propertyId)" okText="Okay" cancelText="Dismiss">
-                    <ion-select-option *ngFor="let property of properties" [value]="property.id">{{property.address}}</ion-select-option>
-                </ion-select>
+                <ion-label>Total</ion-label>
+                <ion-text fill="outline" slot="end">{{ totalExpenses | currency:'USD' }}</ion-text>
             </ion-item>
         </ion-col>
     </ion-row>
@@ -51,7 +54,7 @@
             <ion-item-sliding *ngFor="let expense of filteredExpenses" #slidingItem>
                 <ion-item  [routerLink]="['/', 'places', 'tabs', 'expenses', expense.id]">
                     <ion-label>
-                        <h4>{{expense.amount | currency:'US'}}</h4>
+                        <h4>{{expense.amount | currency:'USD'}}</h4>
                         <div class="expense-details">
                         </div>
                     </ion-label>
