--- a/src/app/places/leases/lease-details/lease-details.page.html
+++ b/src/app/places/leases/lease-details/lease-details.page.html
@@ -33,7 +33,7 @@
         <ion-card-subtitle text-center>Lease Details</ion-card-subtitle>
     </ion-card-header>
     <ion-item>
-        <ion-label>Property Address</ion-label>
+        <ion-label>Address</ion-label>
         <ion-text fill="outline" slot="end">{{ lease.Property.address }}</ion-text>
     </ion-item>
     <ion-item>
