--- a/src/app/places/expenses/expenses.page.html
+++ b/src/app/places/expenses/expenses.page.html
@@ -19,7 +19,7 @@
             <ion-item>
                 <ion-label>Filter By Property</ion-label>
                 <ion-select [(ngModel)]="propertyId" (ionChange)="filterExpenses()" okText="Okay" cancelText="Dismiss">
-                        <ion-select-option [value]="">All Properties</ion-select-option>
+                        <ion-select-option [value]="''">All Properties</ion-select-option>
                     <ion-select-option *ngFor="let property of properties" [value]="property.id">{{property.address}}</ion-select-option>
                 </ion-select>
             </ion-item>
@@ -31,7 +31,7 @@
             <ion-item>
                 <ion-label>Filter By Category</ion-label>
                 <ion-select [(ngModel)]="category" (ionChange)="filterExpenses()" okText="Okay" cancelText="Dismiss">
-                    <ion-select-option [value]="">All Category</ion-select-option>
+                    <ion-select-option [value]="''">All Categories</ion-select-option>
                     <ion-select-option *ngFor="let category of expenseCategories" [value]="category">{{category}}</ion-select-option>
                 </ion-select>
             </ion-item>
